--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "compression": "^1.7.4",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,9 +24,11 @@
     "react-router-dom": "^6.11.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.10",
-    "swiper": "^9.2.4"
+    "swiper": "^9.2.4",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/react": "^18.2.2",
     "@types/react-dom": "^18.2.3",
     "@types/styled-components": "^5.1.26",
