--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "compression": "^1.7.4",
     "firebase": "^9.21.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -28,6 +29,7 @@
     "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.1",
     "@types/compression": "^1.7.2",
     "@types/react": "^18.2.2",
     "@types/react-dom": "^18.2.3",
